# mushroom-tracker-app

./: .env.example  .env.local  .gitignore  .vercelignore  App.jsx  CHANGELOG.md  README.md  audit-inbound.csv  build-and-zip-deploy.bat  capacitor.config.json  capactor.config.ts  dev.ps1  firebase-storage-cors.json  firebase.json  firestore.indexes.json  firestore.rules  index.html  keystore.properties  package-lock.json  package.json  playwright.config.ts  postcss.config.js  refactor-project.bat  run new builds on desktop.txt  storage.rules  tailwind.config.js  vite.config.js
.firebase_emulators/: firebase-export-metadata.json
.firebase_emulators/storage_export/: buckets.json
.github/workflows/: build-android.yml  build-windows.yml  ci.yml  e2e.yml  tauri-desktop.yml  tauri-release.yml  web-release.yml
.vercel/: project.json
Main Root Files/: App.jsx  firebase-config.js  index.html  package.json
_unused/src/: desktop.css  mobile.css
android/app/: build.gradle
components/: Analytics.jsx  CalendarView.jsx  Dashboard.jsx  GrowFilters.jsx  GrowForm.jsx  GrowList.jsx  ImportExportButtons.jsx  Login.jsx  LogoutButton.jsx  PhotoUpload.jsx  Settings.jsx  TaskReminder.jsx
deploy/: index.html  manifest.webmanifest  sw.js  vercel.json
deploy/assets/: index-BWlODxj_.css  index-l4L3eC7T.js
dev-dist/: sw.js
docs/: cheatsheet.ps1
e2e/: login.spec.ts  pwa-manifest.spec.ts
playwright-report-ci/: index.html
public/: auth-diag.html  manifest.webmanifest  sw-kill.html
scripts/: Android-MakeKeystore.ps1  Build-AndroidApk.ps1  Build-WindowsInstaller.ps1  CHAT_PROMPT.md  Fix-AndroidEmuLocks.ps1  Install-QueryDeps.ps1  Pack-src-tauri.ps1  Run-MycoDev.cmd  Run-MycoDev.ps1  Sign-AndroidRelease.ps1  Start-Emulators.ps1  Start-MycoCamAvd.cmd  Start-MycoCamAvd.ps1  Stop-AndroidEmus.cmd  Stop-AndroidEmus.ps1  Stop-Emulators.ps1  audit-dead-modules.mjs  release.ps1  release.sh
src/: App.jsx  CameraProbe.tsx  GrowDetails.jsx  GrowForm.jsx  GrowItem.jsx  GrowList.jsx  SearchBar.jsx  TaskList.jsx  firebase-config.js  firebase-config.js.bak  firebase.js  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.bak
src-tauri/src/: lib.rs  main.rs
src/components/: Analytics.jsx  Auth.jsx  BackupManager.jsx  COGManager.jsx  CalendarView.jsx  Dashboard.jsx  DashboardStats.jsx  GrowCard.jsx  (+20 more)
tools/: README.md  find-unused.mjs
(+98 files in other folders)
