[package]
name = "mushroom-tracker"
version = "1.0.2"
description = "Chaotic Neutral Mycology — Desktop"
authors = ["You"]
edition = "2021"

# Desktop binary target (keeps your current desktop flow intact)
[[bin]]
name = "mushroom-tracker"
path = "src/main.rs"

# Mobile/Android requires a library target (cdylib)
[lib]
name = "mushroom_tracker"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
