# src-tauri/Cargo.toml
[package]
name = "mushroom-tracker"
version = "1.0.4"
description = "Chaotic Neutral Mycology — Desktop"
authors = ["You"]
edition = "2021"

[[bin]]
name = "mushroom-tracker"
path = "src/main.rs"

[lib]
name = "mushroom_tracker_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1